--- a/asm/6800.html
+++ b/asm/6800.html
@@ -108,13 +108,13 @@ Used by the routines at <a href="6CAA.html">GameInitialisation</a> and <a href="
 </tr>
 <tr>
 <td class="address-1"><span id="6819"></span>6819</td>
-<td class="instruction">CALL <a href="659C.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="659C.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="681c"></span>681C</td>
-<td class="instruction">CALL <a href="659C.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="659C.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="681f"></span>681F</td>
