--- a/asm/6910.html
+++ b/asm/6910.html
@@ -41,7 +41,7 @@ Next: <a href="691B.html">691B</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">6DA8</a>.
+Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">DrawLargeSprite</a>.
 </div>
 </div>
 </td>
