--- a/asm/6AAC.html
+++ b/asm/6AAC.html
@@ -168,7 +168,7 @@ This entry point is used by the routine at <a href="6B4C.html">Handler_PlayerMov
 </tr>
 <tr>
 <td class="address-1"><span id="6ad5"></span>6AD5</td>
-<td class="instruction">CALL <a href="6650.html">$6650</a></td>
+<td class="instruction">CALL <a href="6650.html">ScrollPlayarea_Right</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
@@ -398,7 +398,7 @@ This entry point is used by the routine at <a href="6B4C.html">Handler_PlayerMov
 </tr>
 <tr>
 <td class="address-1"><span id="6b1c"></span>6B1C</td>
-<td class="instruction">CALL <a href="659C.html">ScrollPlayarea</a></td>
+<td class="instruction">CALL <a href="659C.html">ScrollPlayarea_Left</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
