--- a/asm/6C00.html
+++ b/asm/6C00.html
@@ -216,7 +216,7 @@ Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6c38"></span>6C38</td>
-<td class="instruction">CALL <a href="659C.html">ScrollPlayarea</a></td>
+<td class="instruction">CALL <a href="659C.html">ScrollPlayarea_Left</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -240,7 +240,7 @@ Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC
 <tr>
 <td class="asm-label">Game_Loop_0</td>
 <td class="address-2"><span id="6c43"></span>6C43</td>
-<td class="instruction">CALL <a href="6650.html">$6650</a></td>
+<td class="instruction">CALL <a href="6650.html">ScrollPlayarea_Right</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
