--- a/asm/6E18.html
+++ b/asm/6E18.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="6DA8.html">6DA8</a>
+Prev: <a href="6E10.html">6E10</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#6e18">Map</a></td>
 <td class="next">
@@ -180,8 +180,8 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6e40"></span>6E40</td>
-<td class="instruction">CALL <a href="659C.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="659C.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="659C.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -210,8 +210,8 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6e4b"></span>6E4B</td>
-<td class="instruction">CALL <a href="6650.html">$6650</a></td>
-<td class="comment-1" rowspan="1">Call <a href="6650.html">6650</a>.</td>
+<td class="instruction">CALL <a href="6650.html">ScrollPlayarea_Right</a></td>
+<td class="comment-1" rowspan="1">Call <a href="6650.html">ScrollPlayarea_Right</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -1106,7 +1106,7 @@ This entry point is used by the routines at <a href="7161.html">Check_DemoMode</
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="6DA8.html">6DA8</a>
+Prev: <a href="6E10.html">6E10</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#6e18">Map</a></td>
 <td class="next">
