--- a/dec/asm/25956.html
+++ b/dec/asm/25956.html
@@ -41,7 +41,7 @@ Next: <a href="26011.html">26011</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="26012.html">ScrollPlayarea</a> and <a href="26192.html">26192</a>.
+Used by the routines at <a href="26012.html">ScrollPlayarea_Left</a> and <a href="26192.html">ScrollPlayarea_Right</a>.
 </div>
 </div>
 <table class="input">
