--- a/dec/asm/27308.html
+++ b/dec/asm/27308.html
@@ -168,7 +168,7 @@ This entry point is used by the routine at <a href="27468.html">Handler_PlayerMo
 </tr>
 <tr>
 <td class="address-1"><span id="27349"></span>27349</td>
-<td class="instruction">CALL <a href="26192.html">26192</a></td>
+<td class="instruction">CALL <a href="26192.html">ScrollPlayarea_Right</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
@@ -398,7 +398,7 @@ This entry point is used by the routine at <a href="27468.html">Handler_PlayerMo
 </tr>
 <tr>
 <td class="address-1"><span id="27420"></span>27420</td>
-<td class="instruction">CALL <a href="26012.html">ScrollPlayarea</a></td>
+<td class="instruction">CALL <a href="26012.html">ScrollPlayarea_Left</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
