--- a/dec/asm/27648.html
+++ b/dec/asm/27648.html
@@ -216,7 +216,7 @@ Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="6
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27704"></span>27704</td>
-<td class="instruction">CALL <a href="26012.html">ScrollPlayarea</a></td>
+<td class="instruction">CALL <a href="26012.html">ScrollPlayarea_Left</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -240,7 +240,7 @@ Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="6
 <tr>
 <td class="asm-label">Game_Loop_0</td>
 <td class="address-2"><span id="27715"></span>27715</td>
-<td class="instruction">CALL <a href="26192.html">26192</a></td>
+<td class="instruction">CALL <a href="26192.html">ScrollPlayarea_Right</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
