--- a/dec/asm/28054.html
+++ b/dec/asm/28054.html
@@ -41,7 +41,7 @@ Next: <a href="28072.html">28072</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="28072.html">28072</a>.
+Used by the routine at <a href="28072.html">DrawLargeSprite</a>.
 </div>
 </div>
 </td>
