--- a/dec/asm/28176.html
+++ b/dec/asm/28176.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Unused RAM at 27026</title>
+<title>Wheelie: Data at 28176</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -17,25 +17,25 @@ gtag('js', new Date());
 gtag('config', 'G-75RERFCHBG');
 </script>
 </head>
-<body class="Asm-u">
+<body class="Asm-b">
 <table class="header">
 <tr>
 <td class="logo"><a href="../index.html"><img alt="logo" src="../images/logo.png" /></a></td>
-<td class="page-header">Unused</td>
+<td class="page-header">Data</td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="27016.html">27016</a>
+Prev: <a href="28072.html">28072</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#27026">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#28176">Map</a></td>
 <td class="next">
-Next: <a href="27030.html">27030</a>
+Next: <a href="28184.html">28184</a>
 </td>
 </tr>
 </table>
-<div class="description">27026: Unused</div>
+<div class="description">28176: Data block at 6E10</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,19 +44,19 @@ Next: <a href="27030.html">27030</a>
 </td>
 </tr>
 <tr>
-<td class="address-1"><span id="27026"></span>27026</td>
-<td class="instruction">DEFB 0,0,0,0</td>
+<td class="address-1"><span id="28176"></span>28176</td>
+<td class="instruction">DEFB 0,0,1,7,6,1,0,0</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="27016.html">27016</a>
+Prev: <a href="28072.html">28072</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#27026">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#28176">Map</a></td>
 <td class="next">
-Next: <a href="27030.html">27030</a>
+Next: <a href="28184.html">28184</a>
 </td>
 </tr>
 </table>
@@ -65,7 +65,7 @@ Next: <a href="27030.html">27030</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.6.</div>
 <div class="repository">Link to <a rel="noopener nofollow" href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../../asm/6992.html">Switch to hexadecimal</a>.</div>
+<div><a href="../../asm/6E10.html">Switch to hexadecimal</a>.</div>
 </footer>
 </body>
 </html>
