--- a/dec/asm/28184.html
+++ b/dec/asm/28184.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="28072.html">28072</a>
+Prev: <a href="28176.html">28176</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#28184">Map</a></td>
 <td class="next">
@@ -180,8 +180,8 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="28224"></span>28224</td>
-<td class="instruction">CALL <a href="26012.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="26012.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -210,8 +210,8 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="28235"></span>28235</td>
-<td class="instruction">CALL <a href="26192.html">26192</a></td>
-<td class="comment-1" rowspan="1">Call <a href="26192.html">26192</a>.</td>
+<td class="instruction">CALL <a href="26192.html">ScrollPlayarea_Right</a></td>
+<td class="comment-1" rowspan="1">Call <a href="26192.html">ScrollPlayarea_Right</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -1106,7 +1106,7 @@ This entry point is used by the routines at <a href="29025.html">Check_DemoMode<
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="28072.html">28072</a>
+Prev: <a href="28176.html">28176</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#28184">Map</a></td>
 <td class="next">
