--- a/dec/maps/data.html
+++ b/dec/maps/data.html
@@ -57,6 +57,14 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">110</td>
+<td class="map-byte">16</td>
+<td class="map-b"><span id="28176"></span><a href="../asm/28176.html">28176</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28176.html">Data block at 6E10</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">119</td>
 <td class="map-byte">249</td>
 <td class="map-b"><span id="30713"></span><a href="../asm/30713.html">30713</a></td>
@@ -269,7 +277,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-b"><span id="50432"></span><a href="../asm/50432.html">50432</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/50432.html">Data: Graphics</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/50432.html">Sprite Animation Data</a></div>
 </td>
 </tr>
 <tr>
