--- a/dec/maps/routines.html
+++ b/dec/maps/routines.html
@@ -81,13 +81,13 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="26012"></span><a href="../asm/26012.html">26012</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26012.html">Scroll Playarea</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26012.html">Scroll Playarea Left</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="26192"></span><a href="../asm/26192.html">26192</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26192.html">Routine at 6650</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26192.html">Scroll Playarea Right</a></div>
 </td>
 </tr>
 <tr>
@@ -147,7 +147,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="26860"></span><a href="../asm/26860.html">26860</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26860.html">Routine at 68EC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26860.html">Complete Sprite Sequence</a></div>
 </td>
 </tr>
 <tr>
@@ -172,6 +172,12 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-c"><span id="26924"></span><a href="../asm/26924.html">26924</a></td>
 <td class="map-c-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26924.html">Draw Sprite Object</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-c"><span id="27016"></span><a href="../asm/27016.html">27016</a></td>
+<td class="map-c-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27016.html">Routine at 6988</a></div>
 </td>
 </tr>
 <tr>
@@ -285,7 +291,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="28072"></span><a href="../asm/28072.html">28072</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28072.html">Routine at 6DA8</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28072.html">Draw Large Sprite</a></div>
 </td>
 </tr>
 <tr>
