--- a/maps/all.html
+++ b/maps/all.html
@@ -157,7 +157,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">156</td>
 <td class="map-c"><span id="659c"></span><a href="../asm/659C.html">659C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/659C.html">Scroll Playarea</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/659C.html">Scroll Playarea Left</a></div>
 </td>
 </tr>
 <tr>
@@ -173,7 +173,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">80</td>
 <td class="map-c"><span id="6650"></span><a href="../asm/6650.html">6650</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6650.html">Routine at 6650</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6650.html">Scroll Playarea Right</a></div>
 </td>
 </tr>
 <tr>
@@ -317,7 +317,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">236</td>
 <td class="map-c"><span id="68ec"></span><a href="../asm/68EC.html">68EC</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/68EC.html">Routine at 68EC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/68EC.html">Complete Sprite Sequence</a></div>
 </td>
 </tr>
 <tr>
@@ -358,6 +358,14 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-c"><span id="692c"></span><a href="../asm/692C.html">692C</a></td>
 <td class="map-c-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/692C.html">Draw Sprite Object</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">105</td>
+<td class="map-byte">136</td>
+<td class="map-c"><span id="6988"></span><a href="../asm/6988.html">6988</a></td>
+<td class="map-c-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6988.html">Routine at 6988</a></div>
 </td>
 </tr>
 <tr>
@@ -581,7 +589,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">168</td>
 <td class="map-c"><span id="6da8"></span><a href="../asm/6DA8.html">6DA8</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6DA8.html">Routine at 6DA8</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6DA8.html">Draw Large Sprite</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">110</td>
+<td class="map-byte">16</td>
+<td class="map-b"><span id="6e10"></span><a href="../asm/6E10.html">6E10</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E10.html">Data block at 6E10</a></div>
 </td>
 </tr>
 <tr>
@@ -1797,7 +1813,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-b"><span id="c500"></span><a href="../asm/C500.html">C500</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/C500.html">Data: Graphics</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/C500.html">Sprite Animation Data</a></div>
 </td>
 </tr>
 <tr>
