--- a/maps/data.html
+++ b/maps/data.html
@@ -57,6 +57,14 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">110</td>
+<td class="map-byte">16</td>
+<td class="map-b"><span id="6e10"></span><a href="../asm/6E10.html">6E10</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E10.html">Data block at 6E10</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">119</td>
 <td class="map-byte">249</td>
 <td class="map-b"><span id="77f9"></span><a href="../asm/77F9.html">77F9</a></td>
@@ -269,7 +277,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-b"><span id="c500"></span><a href="../asm/C500.html">C500</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/C500.html">Data: Graphics</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/C500.html">Sprite Animation Data</a></div>
 </td>
 </tr>
 <tr>
