--- a/maps/routines.html
+++ b/maps/routines.html
@@ -81,13 +81,13 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="659c"></span><a href="../asm/659C.html">659C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/659C.html">Scroll Playarea</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/659C.html">Scroll Playarea Left</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="6650"></span><a href="../asm/6650.html">6650</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6650.html">Routine at 6650</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6650.html">Scroll Playarea Right</a></div>
 </td>
 </tr>
 <tr>
@@ -147,7 +147,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="68ec"></span><a href="../asm/68EC.html">68EC</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/68EC.html">Routine at 68EC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/68EC.html">Complete Sprite Sequence</a></div>
 </td>
 </tr>
 <tr>
@@ -172,6 +172,12 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-c"><span id="692c"></span><a href="../asm/692C.html">692C</a></td>
 <td class="map-c-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/692C.html">Draw Sprite Object</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-c"><span id="6988"></span><a href="../asm/6988.html">6988</a></td>
+<td class="map-c-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6988.html">Routine at 6988</a></div>
 </td>
 </tr>
 <tr>
@@ -285,7 +291,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="6da8"></span><a href="../asm/6DA8.html">6DA8</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6DA8.html">Routine at 6DA8</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6DA8.html">Draw Large Sprite</a></div>
 </td>
 </tr>
 <tr>
