--- a/asm/6564.html
+++ b/asm/6564.html
@@ -41,7 +41,7 @@ Next: <a href="659B.html">659B</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="659C.html">ScrollPlayarea</a> and <a href="6650.html">6650</a>.
+Used by the routines at <a href="659C.html">ScrollPlayarea_Left</a> and <a href="6650.html">ScrollPlayarea_Right</a>.
 </div>
 </div>
 <table class="input">
