--- a/asm/68EC.html
+++ b/asm/68EC.html
@@ -35,43 +35,61 @@ Next: <a href="68F6.html">68F6</a>
 </td>
 </tr>
 </table>
-<div class="description">68EC: Routine at 68EC</div>
+<div class="description">68EC: Complete Sprite Sequence</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">6DA8</a>.
+Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">DrawLargeSprite</a>.
 </div>
 </div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">B'</td>
+<td class="register-desc">Active block counter</td>
+</tr>
+<tr>
+<td class="register">HL'</td>
+<td class="register-desc">Sprite background buffer pointer</td>
+</tr>
+</table>
 </td>
 </tr>
 <tr>
+<td class="asm-label">CompleteSpriteSequence</td>
 <td class="address-2"><span id="68ec"></span>68EC</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch to the shadow registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="68ed"></span>68ED</td>
 <td class="instruction">LD ($781C),HL</td>
-<td class="comment-1" rowspan="1">Write <span class="register">HL'</span> to *<a href="781C.html">SpriteBackgroundBuffer_Pointer</a>.</td>
+<td class="comment-1" rowspan="1">Write the updated sprite background buffer pointer to *<a href="781C.html">SpriteBackgroundBuffer_Pointer</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="68f0"></span>68F0</td>
 <td class="instruction">LD A,B</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">B'</span>.</td>
+<td class="comment-1" rowspan="2">Write the updated active block counter to *<a href="781B.html">ActiveSpriteBlocks</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="68f1"></span>68F1</td>
 <td class="instruction">LD ($781B),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="781B.html">ActiveSpriteBlocks</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="68f4"></span>68F4</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch back to the normal registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="68f5"></span>68F5</td>
 <td class="instruction">RET</td>
 <td class="comment-1" rowspan="1">Return.</td>
