--- a/asm/68F6.html
+++ b/asm/68F6.html
@@ -41,16 +41,33 @@ Next: <a href="6910.html">6910</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">6DA8</a>.
+Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6DA8.html">DrawLargeSprite</a>.
 </div>
 </div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">BC</td>
+<td class="register-desc">Sprite data pointer</td>
+</tr>
+<tr>
+<td class="register">HL</td>
+<td class="register-desc">Screen buffer address</td>
+</tr>
+<tr>
+<td class="register">HL'</td>
+<td class="register-desc">Sprite background buffer</td>
+</tr>
+</table>
 </td>
 </tr>
 <tr>
 <td class="asm-label">DrawSprite</td>
 <td class="address-2"><span id="68f6"></span>68F6</td>
 <td class="instruction">LD A,(HL)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">HL</span>.</td>
+<td class="comment-1" rowspan="1">Read the current screen data (row 01).</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -62,13 +79,13 @@ Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6D
 <td class="asm-label"></td>
 <td class="address-1"><span id="68f8"></span>68F8</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL'</span>.</td>
+<td class="comment-1" rowspan="1">Save row 01 background data to the sprite background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="68f9"></span>68F9</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL'</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next position in the background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -80,55 +97,53 @@ Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6D
 <td class="asm-label"></td>
 <td class="address-1"><span id="68fb"></span>68FB</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="2">Write sprite pixel data to row 01 of the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="68fc"></span>68FC</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="68fd"></span>68FD</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next sprite data byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="68fe"></span>68FE</td>
 <td class="instruction">INC H</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">H</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to row 02 in the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="68ff"></span>68FF</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="2">Write sprite pixel data to row 02 of the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6900"></span>6900</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6901"></span>6901</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next sprite data byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6902"></span>6902</td>
 <td class="instruction">INC H</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">H</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to row 03 in the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6903"></span>6903</td>
 <td class="instruction">LD A,(HL)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">HL</span>.</td>
+<td class="comment-1" rowspan="1">Read the current screen data (row 03).</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -140,13 +155,13 @@ Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6D
 <td class="asm-label"></td>
 <td class="address-1"><span id="6905"></span>6905</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL'</span>.</td>
+<td class="comment-1" rowspan="1">Save row 03 background data to the sprite background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6906"></span>6906</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL'</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next position in the background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -158,43 +173,41 @@ Used by the routines at <a href="692C.html">DrawSpriteObject</a> and <a href="6D
 <td class="asm-label"></td>
 <td class="address-1"><span id="6908"></span>6908</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="2">Write sprite pixel data to row 03 of the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6909"></span>6909</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="690a"></span>690A</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next sprite data byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="690b"></span>690B</td>
 <td class="instruction">INC H</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">H</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to row 04 in the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="690c"></span>690C</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="2">Write sprite pixel data to row 04 of the screen buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="690d"></span>690D</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="690e"></span>690E</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next sprite data byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
