--- a/asm/691B.html
+++ b/asm/691B.html
@@ -41,64 +41,97 @@ Next: <a href="692B.html">692B</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="692C.html">DrawSpriteObject</a>.
+Used by the routine at <a href="6988.html">6988</a>.
 </div>
 </div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">A</td>
+<td class="register-desc">Sprite data</td>
+</tr>
+<tr>
+<td class="register">B'</td>
+<td class="register-desc">Sprite block counter</td>
+</tr>
+<tr>
+<td class="register">C'</td>
+<td class="register-desc">Sprite attribute</td>
+</tr>
+<tr>
+<td class="register">D'</td>
+<td class="register-desc">Sprite Y position</td>
+</tr>
+<tr>
+<td class="register">E'</td>
+<td class="register-desc">Sprite X position</td>
+</tr>
+<tr>
+<td class="register">HL'</td>
+<td class="register-desc">Background buffer store</td>
+</tr>
+<tr>
+<td class="register">HL</td>
+<td class="register-desc">Attribute buffer pointer</td>
+</tr>
+</table>
 </td>
 </tr>
 <tr>
 <td class="asm-label">ColouriseSprite</td>
 <td class="address-2"><span id="691b"></span>691B</td>
 <td class="instruction">INC B</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">B'</span> by one.</td>
+<td class="comment-1" rowspan="1">Increment the sprite block counter in <span class="register">B'</span> by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="691c"></span>691C</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL'</span>.</td>
+<td class="comment-1" rowspan="1">Write the sprite data to the sprite background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="691d"></span>691D</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL'</span> by one.</td>
+<td class="comment-1" rowspan="1">Increment the sprite background buffer by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="691e"></span>691E</td>
 <td class="instruction">LD (HL),E</td>
-<td class="comment-1" rowspan="1">Write <span class="register">E</span> to *<span class="register">HL'</span>.</td>
+<td class="comment-1" rowspan="1">Write the sprite X position to the sprite background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="691f"></span>691F</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL'</span> by one.</td>
+<td class="comment-1" rowspan="1">Increment the sprite background buffer by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6920"></span>6920</td>
 <td class="instruction">LD (HL),D</td>
-<td class="comment-1" rowspan="1">Write <span class="register">D</span> to *<span class="register">HL'</span>.</td>
+<td class="comment-1" rowspan="1">Write the sprite Y position to the sprite background buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6921"></span>6921</td>
 <td class="instruction">INC HL</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">HL'</span> by one.</td>
+<td class="comment-1" rowspan="1">Increment the sprite background buffer by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6922"></span>6922</td>
 <td class="instruction">CP $07</td>
-<td class="comment-1" rowspan="1">Compare <span class="register">A</span> with 07.</td>
+<td class="comment-1" rowspan="1">Check if this is a special sprite (type 07).</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6924"></span>6924</td>
 <td class="instruction">LD A,C</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">C'</span>.</td>
+<td class="comment-1" rowspan="1">Load the sprite attribute from <span class="register">C'</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -110,13 +143,13 @@ Used by the routine at <a href="692C.html">DrawSpriteObject</a>.
 <td class="asm-label"></td>
 <td class="address-1"><span id="6926"></span>6926</td>
 <td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
+<td class="comment-1" rowspan="1">Write the sprite attribute to the attribute buffer.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6927"></span>6927</td>
 <td class="instruction">RET NZ</td>
-<td class="comment-1" rowspan="1">Return if <span class="register">A</span> was not equal to 07 on line <a href="691B.html#6922">6922</a>.</td>
+<td class="comment-1" rowspan="1">Return if this isn't a special type 07 sprite (from line <a href="691B.html#6922">6922</a>).</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
