--- a/asm/6992.html
+++ b/asm/6992.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="692C.html">692C</a>
+Prev: <a href="6988.html">6988</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#6992">Map</a></td>
 <td class="next">
@@ -52,7 +52,7 @@ Next: <a href="6996.html">6996</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="692C.html">692C</a>
+Prev: <a href="6988.html">6988</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#6992">Map</a></td>
 <td class="next">
