--- a/dec/asm/26624.html
+++ b/dec/asm/26624.html
@@ -108,13 +108,13 @@ Used by the routines at <a href="27818.html">GameInitialisation</a> and <a href=
 </tr>
 <tr>
 <td class="address-1"><span id="26649"></span>26649</td>
-<td class="instruction">CALL <a href="26012.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="26012.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="26652"></span>26652</td>
-<td class="instruction">CALL <a href="26012.html">ScrollPlayarea</a></td>
-<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea</a>.</td>
+<td class="instruction">CALL <a href="26012.html">ScrollPlayarea_Left</a></td>
+<td class="comment-1" rowspan="1">Call <a href="26012.html">ScrollPlayarea_Left</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="26655"></span>26655</td>
