--- a/dec/asm/26860.html
+++ b/dec/asm/26860.html
@@ -35,43 +35,61 @@ Next: <a href="26870.html">26870</a>
 </td>
 </tr>
 </table>
-<div class="description">26860: Routine at 68EC</div>
+<div class="description">26860: Complete Sprite Sequence</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="26924.html">DrawSpriteObject</a> and <a href="28072.html">28072</a>.
+Used by the routines at <a href="26924.html">DrawSpriteObject</a> and <a href="28072.html">DrawLargeSprite</a>.
 </div>
 </div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">B'</td>
+<td class="register-desc">Active block counter</td>
+</tr>
+<tr>
+<td class="register">HL'</td>
+<td class="register-desc">Sprite background buffer pointer</td>
+</tr>
+</table>
 </td>
 </tr>
 <tr>
+<td class="asm-label">CompleteSpriteSequence</td>
 <td class="address-2"><span id="26860"></span>26860</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch to the shadow registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26861"></span>26861</td>
 <td class="instruction">LD (30748),HL</td>
-<td class="comment-1" rowspan="1">Write <span class="register">HL'</span> to *<a href="30748.html">SpriteBackgroundBuffer_Pointer</a>.</td>
+<td class="comment-1" rowspan="1">Write the updated sprite background buffer pointer to *<a href="30748.html">SpriteBackgroundBuffer_Pointer</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26864"></span>26864</td>
 <td class="instruction">LD A,B</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">B'</span>.</td>
+<td class="comment-1" rowspan="2">Write the updated active block counter to *<a href="30747.html">ActiveSpriteBlocks</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26865"></span>26865</td>
 <td class="instruction">LD (30747),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30747.html">ActiveSpriteBlocks</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26868"></span>26868</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch back to the normal registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="26869"></span>26869</td>
 <td class="instruction">RET</td>
 <td class="comment-1" rowspan="1">Return.</td>
