--- a/dec/asm/26924.html
+++ b/dec/asm/26924.html
@@ -31,7 +31,7 @@ Prev: <a href="26923.html">26923</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#26924">Map</a></td>
 <td class="next">
-Next: <a href="27026.html">27026</a>
+Next: <a href="27016.html">27016</a>
 </td>
 </tr>
 </table>
@@ -49,16 +49,16 @@ Used by the routines at <a href="27437.html">Handler_PlayerSprite</a> and <a hre
 <th colspan="2">Input</th>
 </tr>
 <tr>
-<td class="register">DE</td>
-<td class="register-desc">Sprite screen position</td>
-</tr>
-<tr>
 <td class="register">A</td>
 <td class="register-desc">Sprite frame ID</td>
 </tr>
 <tr>
 <td class="register">C</td>
 <td class="register-desc">Sprite colour</td>
+</tr>
+<tr>
+<td class="register">DE</td>
+<td class="register-desc">Sprite screen position</td>
 </tr>
 </table>
 </td>
@@ -209,96 +209,121 @@ Fetch the sprite data.
 <td class="asm-label"></td>
 <td class="address-1"><span id="26944"></span>26944</td>
 <td class="instruction">LD C,(HL)</td>
-<td class="comment-1" rowspan="1"><span class="register">C</span>=*<span class="register">HL</span>.</td>
+<td class="comment-1" rowspan="3">Fetch the sprite data address from *<span class="register">HL</span> and store it in <span class="register">BC</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26945"></span>26945</td>
 <td class="instruction">INC L</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">L</span> by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26946"></span>26946</td>
 <td class="instruction">LD B,(HL)</td>
-<td class="comment-1" rowspan="1"><span class="register">B</span>=*<span class="register">HL</span>.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="26947"></span>
+<div class="comments">
+<div class="paragraph">
+Check the sprite "type" bit.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26947"></span>26947</td>
 <td class="instruction">BIT 5,A</td>
-<td class="comment-1" rowspan="1">Test bit 5 of <span class="register">A</span>.</td>
+<td class="comment-1" rowspan="2">Jump to <a href="28072.html">DrawLargeSprite</a> if bit 5 of the sprite ID is set.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26949"></span>26949</td>
-<td class="instruction">JP NZ,<a href="28072.html">28072</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="28072.html">28072</a> if {} is not zero.</td>
+<td class="instruction">JP NZ,<a href="28072.html">DrawLargeSprite</a></td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="26952"></span>
+<div class="comments">
+<div class="paragraph">
+Process regular sprite animation frames.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26952"></span>26952</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="1">Fetch the sprite X offset and store it in <span class="register">A</span>.</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_0</td>
+<td class="asm-label">ProcessNextFrame</td>
 <td class="address-2"><span id="26953"></span>26953</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next data byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26954"></span>26954</td>
 <td class="instruction">ADD A,E</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>+=<span class="register">E</span>.</td>
+<td class="comment-1" rowspan="2"><span class="register">E</span>=base X position + the sprite X offset.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26955"></span>26955</td>
 <td class="instruction">LD E,A</td>
-<td class="comment-1" rowspan="1"><span class="register">E</span>=<span class="register">A</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26956"></span>26956</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="1">Fetch the sprite Y offset and store it in <span class="register">A</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26957"></span>26957</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next data byte.</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_1</td>
+<td class="asm-label">CalculatePosition</td>
 <td class="address-2"><span id="26958"></span>26958</td>
 <td class="instruction">ADD A,D</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>+=<span class="register">D</span>.</td>
+<td class="comment-1" rowspan="2"><span class="register">D</span>=base Y position + the sprite Y offset.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26959"></span>26959</td>
 <td class="instruction">LD D,A</td>
-<td class="comment-1" rowspan="1"><span class="register">D</span>=<span class="register">A</span>.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="26960"></span>
+<div class="comments">
+<div class="paragraph">
+Check if the sprite frame is within the screen boundaries.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26960"></span>26960</td>
 <td class="instruction">CP 16</td>
-<td class="comment-1" rowspan="2">Jump to <a href="26924.html#26969">CheckNextFrame</a> if <span class="register">A</span> is higher than 16.</td>
+<td class="comment-1" rowspan="2">Jump to <a href="26924.html#26969">SkipToNextFrame</a> if the sprites "Y" position is higher than 16.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26962"></span>26962</td>
-<td class="instruction">JR NC,<a href="26924.html#26969">CheckNextFrame</a></td>
+<td class="instruction">JR NC,<a href="26924.html#26969">SkipToNextFrame</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26964"></span>26964</td>
 <td class="instruction">LD A,E</td>
-<td class="comment-1" rowspan="3">Jump to <a href="26924.html#26990">DrawSpriteObject_3</a> if <span class="register">E</span> is lower than 32.</td>
+<td class="comment-1" rowspan="3">Jump to <a href="26924.html#26990">DrawVisibleFrame</a> if the sprites "X" position is lower than 32.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -308,13 +333,23 @@ Fetch the sprite data.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26967"></span>26967</td>
-<td class="instruction">JR C,<a href="26924.html#26990">DrawSpriteObject_3</a></td>
+<td class="instruction">JR C,<a href="26924.html#26990">DrawVisibleFrame</a></td>
 </tr>
 <tr>
-<td class="asm-label">CheckNextFrame</td>
+<td class="routine-comment" colspan="5">
+<span id="26969"></span>
+<div class="comments">
+<div class="paragraph">
+Skip the current frame and advance to the next frame data.
+</div>
+</div>
+</td>
+</tr>
+<tr>
+<td class="asm-label">SkipToNextFrame</td>
 <td class="address-2"><span id="26969"></span>26969</td>
 <td class="instruction">LD HL,8</td>
-<td class="comment-1" rowspan="4"><span class="register">BC</span>+=0008.</td>
+<td class="comment-1" rowspan="4"><span class="register">BC</span>=sprite data pointer+0008.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -332,17 +367,17 @@ Fetch the sprite data.
 <td class="instruction">LD C,L</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_2</td>
+<td class="asm-label">CheckNextFrame</td>
 <td class="address-2"><span id="26975"></span>26975</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
+<td class="comment-1" rowspan="1">Load <span class="register">A</span> with the next control byte from *<span class="register">BC</span>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
 <span id="26976"></span>
 <div class="comments">
 <div class="paragraph">
-Check for the terminator (255+1 will set the Z flag).
+Check for the terminator (255+1 will set the zero flag).
 </div>
 </div>
 </td>
@@ -351,19 +386,19 @@ Check for the terminator (255+1 will set the Z flag).
 <td class="asm-label"></td>
 <td class="address-1"><span id="26976"></span>26976</td>
 <td class="instruction">INC A</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">A</span> by one.</td>
+<td class="comment-1" rowspan="1">Increment the control byte by one.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26977"></span>26977</td>
 <td class="instruction">LD A,1</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=1.</td>
+<td class="comment-1" rowspan="1">Set the sprite "type" flag in <span class="register">A</span> to 1.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26979"></span>26979</td>
-<td class="instruction">JR NZ,<a href="26924.html#26958">DrawSpriteObject_1</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26924.html#26958">DrawSpriteObject_1</a> if <span class="register">A</span> was not zero (on line <a href="26924.html#26976">26976</a>).</td>
+<td class="instruction">JR NZ,<a href="26924.html#26958">CalculatePosition</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26924.html#26958">CalculatePosition</a> if the terminator character wasn't detected (on line <a href="26924.html#26976">26976</a>).</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
@@ -379,41 +414,72 @@ We reached the terminator.
 <td class="asm-label"></td>
 <td class="address-1"><span id="26981"></span>26981</td>
 <td class="instruction">INC BC</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">BC</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next data byte.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="26982"></span>
+<div class="comments">
+<div class="paragraph">
+Check for the sequence end marker byte.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26982"></span>26982</td>
 <td class="instruction">LD A,(BC)</td>
-<td class="comment-1" rowspan="3">Jump to <a href="26924.html#26953">DrawSpriteObject_0</a> if *<span class="register">BC</span> is not equal to 128.</td>
+<td class="comment-1" rowspan="1">Read the sequence control byte.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26983"></span>26983</td>
 <td class="instruction">CP 128</td>
+<td class="comment-1" rowspan="2">Jump to <a href="26924.html#26953">ProcessNextFrame</a> if the sequence control byte is not equal to 128.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26985"></span>26985</td>
-<td class="instruction">JR NZ,<a href="26924.html#26953">DrawSpriteObject_0</a></td>
+<td class="instruction">JR NZ,<a href="26924.html#26953">ProcessNextFrame</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26987"></span>26987</td>
-<td class="instruction">JP <a href="26860.html">26860</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26860.html">26860</a>.</td>
+<td class="instruction">JP <a href="26860.html">CompleteSpriteSequence</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26860.html">CompleteSpriteSequence</a>.</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_3</td>
+<td class="routine-comment" colspan="5">
+<span id="26990"></span>
+<div class="comments">
+<div class="paragraph">
+Draw the sprite frame to the screen.
+</div>
+</div>
+</td>
+</tr>
+<tr>
+<td class="asm-label">DrawVisibleFrame</td>
 <td class="address-2"><span id="26990"></span>26990</td>
 <td class="instruction">LD A,D</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">D</span>.</td>
+<td class="comment-1" rowspan="1">Load the sprite Y position.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26991"></span>26991</td>
 <td class="instruction">ADD A,64</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>+=64.</td>
+<td class="comment-1" rowspan="1">Convert it to a screen buffer address.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="26993"></span>
+<div class="comments">
+<div class="paragraph">
+Extract the bits which relate to the ZX Spectrum screen layout.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -425,13 +491,13 @@ We reached the terminator.
 <td class="asm-label"></td>
 <td class="address-1"><span id="26995"></span>26995</td>
 <td class="instruction">LD H,A</td>
-<td class="comment-1" rowspan="1"><span class="register">H</span>=<span class="register">A</span>.</td>
+<td class="comment-1" rowspan="1">Store the result in <span class="register">H</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="26996"></span>26996</td>
 <td class="instruction">LD A,D</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">D</span>.</td>
+<td class="comment-1" rowspan="1">Reload the sprite Y position.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -450,6 +516,16 @@ We reached the terminator.
 <td class="instruction">RRCA</td>
 </tr>
 <tr>
+<td class="routine-comment" colspan="5">
+<span id="27000"></span>
+<div class="comments">
+<div class="paragraph">
+Keep only the row bits.
+</div>
+</div>
+</td>
+</tr>
+<tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27000"></span>27000</td>
 <td class="instruction">AND %11100000</td>
@@ -459,13 +535,22 @@ We reached the terminator.
 <td class="asm-label"></td>
 <td class="address-1"><span id="27002"></span>27002</td>
 <td class="instruction">ADD A,E</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>+=<span class="register">E</span>.</td>
+<td class="comment-1" rowspan="2">Add the sprite X position and store the result in <span class="register">L</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27003"></span>27003</td>
 <td class="instruction">LD L,A</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=<span class="register">A</span>.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="27004"></span>
+<div class="comments">
+<div class="paragraph">
+Draw the sprite to the screen buffer.
+</div>
+</div>
+</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -494,44 +579,8 @@ We reached the terminator.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27014"></span>27014</td>
-<td class="instruction">JR <a href="26924.html#26975">DrawSpriteObject_2</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26924.html#26975">DrawSpriteObject_2</a>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27016"></span>27016</td>
-<td class="instruction">LD (30757),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30757.html">SpriteState</a>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27019"></span>27019</td>
-<td class="instruction">EXX</td>
-<td class="comment-1" rowspan="1">Switch to the shadow registers.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27020"></span>27020</td>
-<td class="instruction">LD (HL),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<span class="register">HL</span>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27021"></span>27021</td>
-<td class="instruction">LD H,B</td>
-<td class="comment-1" rowspan="1">Load the active sprite block count into <span class="register">H</span>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27022"></span>27022</td>
-<td class="instruction">LD L,C</td>
-<td class="comment-1" rowspan="1">Load the attribute byte into <span class="register">L</span>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="27023"></span>27023</td>
-<td class="instruction">JP <a href="26907.html">ColouriseSprite</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="26907.html">ColouriseSprite</a>.</td>
+<td class="instruction">JR <a href="26924.html#26975">CheckNextFrame</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="26924.html#26975">CheckNextFrame</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
@@ -541,7 +590,7 @@ Prev: <a href="26923.html">26923</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#26924">Map</a></td>
 <td class="next">
-Next: <a href="27026.html">27026</a>
+Next: <a href="27016.html">27016</a>
 </td>
 </tr>
 </table>
