--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -157,7 +157,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">156</td>
 <td class="map-c"><span id="26012"></span><a href="../asm/26012.html">26012</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26012.html">Scroll Playarea</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26012.html">Scroll Playarea Left</a></div>
 </td>
 </tr>
 <tr>
@@ -173,7 +173,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">80</td>
 <td class="map-c"><span id="26192"></span><a href="../asm/26192.html">26192</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26192.html">Routine at 6650</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26192.html">Scroll Playarea Right</a></div>
 </td>
 </tr>
 <tr>
@@ -317,7 +317,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">236</td>
 <td class="map-c"><span id="26860"></span><a href="../asm/26860.html">26860</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26860.html">Routine at 68EC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26860.html">Complete Sprite Sequence</a></div>
 </td>
 </tr>
 <tr>
@@ -358,6 +358,14 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-c"><span id="26924"></span><a href="../asm/26924.html">26924</a></td>
 <td class="map-c-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26924.html">Draw Sprite Object</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">105</td>
+<td class="map-byte">136</td>
+<td class="map-c"><span id="27016"></span><a href="../asm/27016.html">27016</a></td>
+<td class="map-c-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27016.html">Routine at 6988</a></div>
 </td>
 </tr>
 <tr>
@@ -581,7 +589,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">168</td>
 <td class="map-c"><span id="28072"></span><a href="../asm/28072.html">28072</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28072.html">Routine at 6DA8</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28072.html">Draw Large Sprite</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">110</td>
+<td class="map-byte">16</td>
+<td class="map-b"><span id="28176"></span><a href="../asm/28176.html">28176</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28176.html">Data block at 6E10</a></div>
 </td>
 </tr>
 <tr>
@@ -1797,7 +1813,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-b"><span id="50432"></span><a href="../asm/50432.html">50432</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/50432.html">Data: Graphics</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/50432.html">Sprite Animation Data</a></div>
 </td>
 </tr>
 <tr>
